[package]
name = "celestia-random-publisher"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45", features = ["full"] }
celestia-rpc = { version = "0.10.0" }
celestia-types = { version = "0.11.0" }
jsonrpsee = { version = "0.24.9" }
rand = { version = "0.9.1", features = ["thread_rng"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"